5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1582_1330.log
== TEST (2019-03-12 17:33:05) 
-- CODE:
print(round(250/6n))
-- ERROR:
File "XXXX", line 1
    print(round(250/6n))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:16) 
-- CODE:
round(250/6n)
-- ERROR:
File "XXXX", line 1
    round(250/6n)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:33:20) 
-- CODE:
round(250/6n)
-- EXECUTION TIME:
0.141072
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250/6n)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:16) 
-- CODE:
print(round(250/6n))
-- ERROR:
File "XXXX", line 1
    print(round(250/6n))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:40) 
-- CODE:
print(round(250n,/6))
-- ERROR:
File "XXXX", line 1
    print(round(250n,/6))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:47) 
-- CODE:
print(round(250n/6))
-- ERROR:
File "XXXX", line 1
    print(round(250n/6))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:28) 
-- CODE:
print(round((x, n)250/6))
-- ERROR:
File "XXXX", line 1
    print(round((x, n)250/6))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:32) 
-- CODE:
print(250/6round(x, n))
-- ERROR:
File "XXXX", line 1
    print(250/6round(x, n))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:43) 
-- CODE:
print(250/6)round(x, n)
-- ERROR:
File "XXXX", line 1
    print(250/6)round(x, n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:50) 
-- CODE:
print(250/6)round(x,n)
-- ERROR:
File "XXXX", line 1
    print(250/6)round(x,n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:25) 
-- CODE:
print(round(250/6)n(250/6)
-- ERROR:
File "XXXX", line 1
    print(round(250/6)n(250/6)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:35) 
-- CODE:
print(round(250/6)n(250/6))
-- ERROR:
File "XXXX", line 1
    print(round(250/6)n(250/6))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:18) 
-- CODE:
print(250/6round(x, n))
-- ERROR:
File "XXXX", line 1
    print(250/6round(x, n))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:18) 
-- CODE:
round(x,n(print(250/6))
-- ERROR:
File "XXXX", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:23) 
-- CODE:
round(x,n(print(250/6))
-- EXECUTION TIME:
0.212215
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:43:23) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:43:27) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.221274
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
